# transceiver

./: CMakeLists.txt  README.md  generate_certificate.sh  main.c
certificates/ca/: ca.crt  ca.key
certificates/ca/certs/: ca.crt
certificates/ca/private/: ca.key
certificates/ca/serial/: ca.srl
certificates/client/: client.crt  client.csr  client.key  client.pem
certificates/client/certs/: client.crt
certificates/client/csr/: client.csr
certificates/client/private/: client.key
certificates/server/: server.crt  server.csr  server.key  server.pem
certificates/server/certs/: server.crt
certificates/server/csr/: server.csr
certificates/server/private/: server.key
